name:                sff
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Pavel Kogan
maintainer:          pkogan@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable sff
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.8, filepath, process,
                       directory, case-insensitive, containers
  default-language:    Haskell2010
